A bunch of fixes
Fix #4325
Fix #4319
Fix #4326
Fix #4327
Fix #4328
Fix “Destribution” typo
Fix Missing tooltips form block/fragment in tables
Fix throw on object page  when no spillover configured
Fix missing bucket availability tooltips
Fix wrong icon for summary tooltips
Fix lnog response time for switching between object parts
Fix some bugs in items cache (effect both objects and hosts)
Fix “Row” typo

--- a/frontend/src/app/components/bucket/bucket-summary/bucket-summary.less
+++ b/frontend/src/app/components/bucket/bucket-summary/bucket-summary.less
@@ -14,7 +14,7 @@ bucket-summary {
         }
     }
 
-    .usage-chart.disabled {
+    .bucket-chart.disabled {
         opacity: .1;
     }
 }
